# cmake-project-with-gtest

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  testing_harness.kdev4
src/: CMakeLists.txt  dummyclass.cpp  dummyclass.h  main.cpp
test/: CMakeLists.txt  dummyclass_test.cpp  test_main.cpp
test/testBin/: test_main
